--- a/button.html
+++ b/button.html
@@ -4,12 +4,11 @@
 <title>
 教材１
 </title>
-
 <script type="text/javascript">
 
 function mojiKawaru(){
 	var span = document.getElementById("target");
-	span.innerHTML = "kakiku";
+	span.innerHTML = "文字が変わりました";
 }
 
 </script>
@@ -17,12 +16,9 @@ function mojiKawaru(){
 <body>
 【ボタンをクリックしたら文字が変わります】<br>
 <input type="button" value="クリックしたら文字が変わります" onclick="mojiKawaru()"><br>
-<span id="target">aiueo</span><br>
+<span id="target">この文字が変わります</span><br>
 </body>
 </html>
-
-
-
 
 #### メモ
 
